--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>FlaskChat</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-	
+	 <div class="container">
+	 	<div class="row">
+	 		<div class="row">
+	 		{% block content %}
+	 		
+	 		{% endblock %}
+	 		</div>
+	 	</div>
+	 </div>
 </body>
 </html>
