--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -12,7 +12,7 @@
 	 
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-6 mx-auto">
             <div class="error-template">
                 <h1>
                     Oops!</h1>
