--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,10 +5,13 @@
 	<title>FlaskChat</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
+
+
 <body>
 	 <div class="container">
 	 	<div class="row">
-	 		<div class="row">
+	 		<div class="col-6 mx-auto">
 	 		{% block content %}
 	 		
 	 		{% endblock %}
@@ -17,3 +20,4 @@
 	 </div>
 </body>
 </html>
+
