--- a/app/templates/chat/sign_up.html
+++ b/app/templates/chat/sign_up.html
@@ -6,34 +6,34 @@
 
 {% block content %}
 
-<form id = "sign_up" method = "POST">
+<form id = "sign_up" method = "POST" action="{{ url_for('chat.sign_up') }}">
 
   <div class="form-group" method="POST">
     <label for="email">Email</label>
-    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" name = "email" value = "{{ request.form.get('email', '') }}">
     <small id="emailHelp" class="form-text text-muted">Введите ваш адресс электронной почты</small>
   </div>
 
 
   <div class="form-group" method="POST">
     <label for="username">Введите имя по которому вас будут видеть другие участники</label>
-    <input type="username" class="form-control" id="username" aria-describedby="emailHelp" placeholder="username">
+    <input type="username" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="username" name = "username" value = "{{ request.form.get('username', '') }}">
     <small id="emailHelp" class="form-text text-muted">Введите ваш адресс электронной почты</small>
   </div>
 
   <div class="form-group">
     <label for="password_input">Пароль</label>
-    <input type="password" class="form-control" id="password_input" placeholder="Password">
+    <input type="password" class="form-control" id="password_input" placeholder="Password" name = "password" value = "">
   </div>
 
   <div class="form-group">
     <label for="repeat_password">Повторите пароль</label>
-    <input type="password" class="form-control" id="repeat_password" placeholder="Repeat Password">
+    <input type="password" class="form-control" id="repeat_password" placeholder="Repeat Password" name = "repeat_password" value = "">
   </div>
 
   <div class="form-group">
     <label for="description">Расскажите о себе(Или не рассказывайте)</label>
-    <textarea class="form-control" id="description" rows="3"></textarea>
+    <textarea class="form-control" id="description" rows="3" name = "description" value = "{{ request.form.get('description', '') }}"></textarea>
   </div>
 
   <button type="submit" class="btn btn-primary" value="Submit">Регистрация</button>
