--- a/app/templates/chat/sign_in.html
+++ b/app/templates/chat/sign_in.html
@@ -4,22 +4,32 @@
 
 {% block content %}
 
-<form id = "sign_in" method = "POST">
+<form id = "sign_in" method = "POST" action = "">
+    {{ form.csrf_token }}
   <div class="form-group">
-    <label for="email">Email</label>
-    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+    <!-- <label for="email">Email</label> -->
+    <!-- <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" name="email" value="{{ request.form.get('email', '') }}"> -->
+    {{ form.email.label }}
+    {{ form.email(class_='form-control') }}
+    
     <small id="emailHelp" class="form-text text-muted">Введите ваш адресс электронной почты</small>
   </div>
 
   <div class="form-group">
-    <label for="password">Пароль</label>
-    <input type="password" class="form-control" id="password" placeholder="Password">
+    <!-- <label for="password">Пароль</label>  -->
+    <!-- <input type="password" class="form-control" id="password" placeholder="Password" name="password" value="{{ request.form.get('password', '') }}"> -->
+    {{ form.password.label}}
+    {{ form.password(class_='form-control') }}
+
   </div>
 
 
   <div class="form-group">  
-  <button type="submit" class="btn btn-primary">регистрация</button>
+  {{ form.remember_me() }} {{ form.remember_me.label }}
+  <!-- <button type="submit" class="btn btn-primary">регистрация</button> -->
+  {{ form.submit(class_ = 'btn btn-primary') }}
   <small id="SignUpHelp" class="form-text text-muted">Нет аккаунта? Пройдите <a href="/sign_up">регистрацию</a></small>
+  
   </div>
 </form>
 
