--- a/app/templates/chat/sign_in.html
+++ b/app/templates/chat/sign_in.html
@@ -23,14 +23,29 @@
 
   </div>
 
+  <div class="form-group">
+    {{ form.remember_me() }} {{ form.remember_me.label }}
+  </div>
 
   <div class="form-group">  
-  {{ form.remember_me() }} {{ form.remember_me.label }}
   <!-- <button type="submit" class="btn btn-primary">регистрация</button> -->
   {{ form.submit(class_ = 'btn btn-primary') }}
   <small id="SignUpHelp" class="form-text text-muted">Нет аккаунта? Пройдите <a href="/sign_up">регистрацию</a></small>
   
   </div>
+
+ 
+  {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for category, message in messages %}
+      <li class="{{ category }}">{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+  {% endwith %}
+
+
 </form>
 
 {% endblock content %}
